Improve research areas scrollbar visibility

--- a/src/app/english/english.component.html
+++ b/src/app/english/english.component.html
@@ -298,8 +298,9 @@
           </div>
         </div>
 
-        <!-- Tree Content -->
-        <div class="max-h-[60vh] overflow-y-auto scrollbar-academic">
+        <!-- Tree Content with scroll indicator -->
+        <div class="relative">
+          <div class="max-h-[50vh] overflow-y-auto scrollbar-academic pr-1">
           <!-- All Researchers Option -->
           <div class="p-2 border-b border-navy-100 dark:border-navy-700">
             <div
@@ -397,6 +398,9 @@
               </div>
             </div>
           </div>
+          </div>
+          <!-- Scroll fade indicator -->
+          <div class="absolute bottom-0 left-0 right-3 h-8 bg-gradient-to-t from-white dark:from-navy-800 to-transparent pointer-events-none"></div>
         </div>
       </div>
     </div>
