--- a/src/app/english/english.component.html
+++ b/src/app/english/english.component.html
@@ -55,7 +55,7 @@
           <i class="fa fa-pen mr-2"></i>
           Nominate Someone
         </a>
-        <a href="https://medium.com/@bkhmsi/egyptians-in-ai-research-1ff64c78cc5b"
+        <a href="https://bkhmsi.medium.com/egyptian-researchers-in-computer-science-6879cdaf84db"
            target="_blank"
            class="btn-ghost !text-white !border-2 !border-white/30 hover:!bg-white/10">
           <i class="fa-brands fa-medium mr-2"></i>
