Add separate blog buttons for Badr and Mohamed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,13 @@
            target="_blank"
            class="flex items-center gap-2 text-navy-200 hover:text-gold-400 transition-colors">
           <i class="fa-brands fa-medium"></i>
-          <span>Blog</span>
+          <span>Badr's Blog</span>
+        </a>
+        <a href="https://medium.com/@mdawoud_2100/egyptian-researchers-in-computer-science-mohamed-moustafa-dawoud-b8e5f358c559?postPublishedType=repub"
+           target="_blank"
+           class="flex items-center gap-2 text-navy-200 hover:text-gold-400 transition-colors">
+          <i class="fa-brands fa-medium"></i>
+          <span>Mohamed's Blog</span>
         </a>
         <a href="https://www.youtube.com/watch?v=PtdyHfpzodg"
            target="_blank"
@@ -147,7 +153,13 @@
            target="_blank"
            class="flex items-center gap-3 px-4 py-2 text-navy-200 hover:text-white hover:bg-navy-800 rounded-lg transition-colors">
           <i class="fa-brands fa-medium w-5"></i>
-          <span>Blog Post</span>
+          <span>Badr's Blog</span>
+        </a>
+        <a href="https://medium.com/@mdawoud_2100/egyptian-researchers-in-computer-science-mohamed-moustafa-dawoud-b8e5f358c559?postPublishedType=repub"
+           target="_blank"
+           class="flex items-center gap-3 px-4 py-2 text-navy-200 hover:text-white hover:bg-navy-800 rounded-lg transition-colors">
+          <i class="fa-brands fa-medium w-5"></i>
+          <span>Mohamed's Blog</span>
         </a>
         <a href="https://www.youtube.com/watch?v=PtdyHfpzodg"
            target="_blank"
